# harborz

./: .env  .gitignore  Cargo.toml  Dockerfile  Harborz.desktop  README.md  docker-compose.yml
.github/workflows/: rust.yml
metal-archives/: Cargo.toml
metal-archives/metadata-fetch/: Cargo.toml
metal-archives/metadata-fetch/src/: lib.rs
metal-archives/src/: lib.rs
migrations/2023-06-10-132201_collection/: up.sql
migrations/2023-06-18-135123_config/: up.sql
migrations/2023-06-20-124758_collection_id_to_row/: down.sql  up.sql
migrations/2023-06-23-095534_songs/: down.sql  up.sql
migrations/2023-06-24-134554_add_song_tags/: down.sql  up.sql
migrations/2023-06-26-153154_current_song_id/: down.sql  up.sql
migrations/2023-07-02-084052_add_duration_to_song/: down.sql  up.sql
migrations/2023-07-12-084641_add_window_width_height/: down.sql  up.sql
migrations/2023-07-12-091353_add_window_maximized/: down.sql  up.sql
migrations/2023-07-15-083145_add_song_indexes/: down.sql  up.sql
migrations/2023-07-17-095420_add_current_song_position/: down.sql  up.sql
migrations/2023-07-19-141303_history_bodies/: down.sql  up.sql
migrations/2023-07-20-061919_last_scroll_adjustment/: down.sql  up.sql
migrations/2023-07-24-135519_song_selected_body/: up.sql
migrations/2023-07-25-072251_query2/: up.sql
migrations/2023-08-06-122201_init/: up.sql
migrations/2023-08-08-055927_song_tags/: up.sql
migrations/2023-08-25-110212_add_body_params/: up.sql
migrations/2023-10-16-142532_remove_navigation_type/: up.sql
src/: choose_file.rs  db.rs  main.rs  models.rs  schema.rs
src/body/: artists.rs  mod.rs
src/body/collection/: body.rs  box.rs  button.rs  mod.rs  model.rs  page.rs
src/body/download/: albums.rs  mod.rs  songs.rs
src/body/merge/: impl.rs  mod.rs
src/collection/: box.rs  dialog.rs  grid.rs  mod.rs  model.rs
src/collection/song/: mod.rs
src/common/: action.rs  check_button_dialog.rs  constant.rs  gesture.rs  mod.rs  state.rs  util.rs  window_action.rs
src/common/wrapper/: imp.rs  mod.rs
src/config/: mod.rs
src/controls/: mod.rs  mpris.rs  playbin.rs  volume.rs
src/home/: history.rs  mod.rs
src/now_playing/: body.rs  bottom_widget.rs  mod.rs  mpris.rs  now_playing.rs  playbin.rs
src/song/: mod.rs
