[package]
name = "harborz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
log = "0.4.19"
std-logger = "0.5.2"
once_cell = "1.18.0"
gtk = { package = "gtk4", version = "0.6.6", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.4.4", features = ["v1_2"] }
diesel = { version = "2.1.0", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
walkdir = "2.3.3"
gstreamer = "0.20.7"
gstreamer-pbutils = "0.20.7"
mpris-player = "0.6.2"
