[package]
name = "harborz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
std-logger = "0.5.2"
once_cell = "1.18.0"
gtk = { package = "gtk4", version = "0.7.3", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.5.3", features = ["v1_4"] }
diesel = { version = "2.1.0", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
walkdir = "2.4.0"
gstreamer = "0.21.1"
gstreamer-pbutils = "0.21.1"
id3 = "1.8.0"
mpris-player = "0.6.2"
serde_json = "1.0.107"
metadata-fetch = { path = "metal-archives/metadata-fetch", version = "0.1.0" }
metal-archives = { path = "metal-archives", version = "0.1.0" }
bytes = "1.5.0"
async-std = "1.12.0"
