[package]
name = "metal-archives"
version = "0.1.0"
edition = "2021"

[dependencies]
metadata-fetch = { path = "metadata-fetch", version = "0.1.0" }
anyhow = "1.0.75"
url = "2.4.1"
serde = "1.0.188"
serde_derive = "1.0.188"
libproxy = "0.1.1"
ureq = { version = "2.7.1", features = ["json"] }
scraper = "0.17.1"
