[package]
name = "metal-archives"
version = "0.1.0"
edition = "2021"

[dependencies]
metadata-fetch = { path = "metadata-fetch", version = "0.1.0" }
anyhow = "1.0.75"
url = "2.4.1"
serde = "1.0.188"
serde_derive = "1.0.188"
libproxy = "0.1.1"
reqwest = { version = "0.11.22", features = ["json"] }
futures = "0.3.28"
async-std = { version = "1.12.0", features = ["tokio1", "unstable"] }
bytes = "1.5.0"
scraper = "0.17.1"
